data and training loop

--- a/env.yml
+++ b/env.yml
@@ -1,5 +1,6 @@
 name: mod
 channels:
+  - huggingface
   - conda-forge
   - defaults
 dependencies:
@@ -10,3 +11,4 @@ dependencies:
   - mlflow
   - databricks-cli
   - chardet
+  - datasets
