Remove fixed versions

--- a/env.yml
+++ b/env.yml
@@ -1,15 +1,17 @@
 name: mod
 channels:
+  - pytorch
   - huggingface
+  - nvidia
   - conda-forge
   - defaults
 dependencies:
-  - python=3.10
-  - databricks-sdk
-  - torch
-  - torchinfo
-  - mlflow
-  - databricks-cli
   - chardet
-  - datasets==2.16.1
-  - pyarrow==15.0.2
+  - databricks-cli
+  - databricks-sdk
+  - datasets
+  - mlflow
+  - pyarrow
+  - python
+  - pytorch
+  - torchinfo
