Update dependencies in env.yml to fix dependency issues

--- a/env.yml
+++ b/env.yml
@@ -1,20 +1,22 @@
-name: mod
+name: test
 channels:
+  - conda-forge
   - pytorch
   - huggingface
   - nvidia
-  - conda-forge
   - defaults
 dependencies:
   - chardet
   - databricks-cli
   - databricks-sdk
-  - datasets
-  - mlflow
-  - pyarrow
   - python
   - pytorch
   - torchinfo
   - transformers
   - fvcore
   - iopath
+  - datasets
+  - mlflow
+  - pip
+  - pip:
+    - pyarrow==15.0.2
